Issue fix for the homepage caption on IE mobile.

--- a/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
@@ -78,7 +78,8 @@
           text-align: center;
         }
         @include breakpoint($mobile) {
-          padding: initial;
+          //padding: initial;
+          padding: 0 0 0 0;
           box-shadow: 10px 0px 0px $white, -10px 0px 0px $white;
           float: none;
         }
